[package]
description = "diamond-node CLI Signer Tool"
homepage = "https://github.com/dmdcoin/diamond-node"
license = "GPL-3.0"
name = "cli-signer"
version = "1.4.0"
authors = ["Parity <admin@parity.io>"]
edition = "2015"

[dependencies]
ethereum-types = "0.9.2"
futures = "0.1"
rpassword = "1.0"
parity-rpc = { path = "../../rpc" }
parity-rpc-client = { path = "rpc-client" }
