[package]
name = "fastmap"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Specialized version of `HashMap` with H256 keys and fast hashing function."
license = "GPL-3.0"
edition = "2015"

[dependencies]
ethereum-types = "0.9.2"
plain_hasher = "0.2"
lru = "0.13.0"
