[package]
description = "parity config generator for hbbft validators"
name = "hbbft_config_generator"
version = "0.0.1"
license = "GPL-3.0"
authors = [
    "David Forstenlechner <dforsten@gmail.com>"
]

[dependencies]
bincode = "1.1.2"
clap = "2"
ethcore = { path = "../../../.." }
ethereum-types = "0.9.2"
ethkey = { path = "../../../../../accounts/ethkey" }
ethstore = { path = "../../../../../accounts/ethstore"}
hbbft = { git = "https://github.com/dforsten/hbbft", rev = "d25315eb1c3a8313db9d99d5d9ba021e0d74a52e" }
hbbft_testing = { git = "https://github.com/dforsten/hbbft", rev = "d25315eb1c3a8313db9d99d5d9ba021e0d74a52e" }
parity-crypto = { version = "0.6.2", features = ["publickey"] }
rand = "0.7.3"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"

[dev-dependencies]
