[package]
description = "parity config generator for hbbft validators"
name = "hbbft_config_generator"
version = "0.0.1"
license = "GPL-3.0"
authors = [
    "David Forstenlechner <dforsten@gmail.com>",
    "Thomas Haller <thomashaller@gmx.at>"
]

[dependencies]
bincode = "1.1.2"
clap = "2"
ethcore = { path = "../../../.." }
ethjson = { path = "../../../../../ethjson" }
ethereum-types = "0.9.2"
ethkey = { path = "../../../../../accounts/ethkey" }
ethstore = { path = "../../../../../accounts/ethstore"}
hbbft = { git = "https://github.com/dforsten/hbbft", rev = "f1d4c1d6f0714b7f267f84aaafa54c8d572c63bd" }
hbbft_testing = { git = "https://github.com/dforsten/hbbft", rev = "f1d4c1d6f0714b7f267f84aaafa54c8d572c63bd" }
parity-crypto = { version = "0.6.2", features = ["publickey"] }
rand = "0.7.3"
rustc-hex = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.6", features = [ "hex", "std", "macros" ] }
toml = "0.5.6"

[dev-dependencies]
